--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <li>The preferred way to submit a csrf token with your request is to attach it to the url via que URL query <code>_csrf=</code>. You can also add it as a cookies with the name <code>x-csrf-token</code>.</li>
 <li>Some endpoints share the same url as some webpages. Therefore, in order to guarantee that you will received data (instead of an HTML response), we advise you to add the HTTP header <code>X-Requested-With: XMLHTTPRequest</code>to every request.</li>
 <li>The media endpoints that store video and audio files support streaming. When calling these files, expect to receive partial content responses (HTTP 206). That is, it is safe to start playback of such files immediately after your media player has buffered enough data.</li>
+<li>This documentation describes the data models (resources) and the properties that pertain to them. You may receive response with additional properties to the ones listed here. We discourage you to create a dependency on properties received within the object but not documented here, as we might rename or remove them from the object model in future releases.</li>
 </ul>
 
 <h3>
@@ -88,10 +89,84 @@
 <td>media</td>
 <td>JSON. Information about the media assets associated with this post. See Media object for information</td>
 </tr>
+<tr>
+<td>styles</td>
+<td>Array. Music genre category of this post, as provided by the artist. Can be null or empty</td>
+</tr>
+<tr>
+<td>category</td>
+<td>String. Category assigned to this post, as provided by the artist. Can be null or empty</td>
+</tr>
+<tr>
+<td><strong>cuid</strong></td>
+<td><strong>String. This is the main, unique identifier of the post</strong></td>
+</tr>
+<tr>
+<td>authorId</td>
+<td>String. Unique userId of the author of the post</td>
+</tr>
+<tr>
+<td>isHitParadeEligible</td>
+<td>Boolean. Specifies whether this post is participating in the hit parade or not</td>
+</tr>
+<tr>
+<td>isEncoded</td>
+<td>Boolean. If true, it means the main media asset of this post has already been processed by our encoding service and it is safe to stream it. If false, it means our encoding service has not yet optimised this video for web streaming, and thus this post should not be displayed to the user</td>
+</tr>
+<tr>
+<td>id</td>
+<td>in disuse</td>
+</tr>
+<tr>
+<td>author</td>
+<td>JSON. User object with information about the author of the post. See User resource description for details.</td>
+</tr>
 </tbody>
 </table>
 
-<pre><code>    "media": {
+<p><em>Sample:</em></p>
+
+<pre><code>{
+    "content": "adsf",
+    "date_published": 1442473848399,
+    "liked_by": [
+        {
+            "userId": "cicg17uam0000n7kf3gvdnozt"
+        }
+    ],
+    "comments": [
+        {
+            "postId": "cienvoor30000sfpns52nxtg7",
+            "commentId": "ciepxhc3y0000rrpn6chjwep4",
+            "author": {
+                "userId": "cicg17uam0000n7kf3gvdnozt",
+                "displayName": "rock latino",
+                "city": "san jose",
+                "country": "Costa Rica",
+                "role": "artist",
+                "dateCreated": "1437645847171",
+                "canopyPicture": "https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png",
+                "selfie": "https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png",
+                "identityProvider": "local",
+                "facebookOptIn": false,
+                "points": 0,
+                "members": 2,
+                "styles": [
+                    "Volksmusik"
+                ],
+                "managed": true,
+                "recordManaged": true,
+                "storeAGB": true
+            },
+            "content": "this is a comment",
+            "datePublished": 1442597797007
+        }
+    ],
+    "title": "asdf",
+    "likesCount": 1,
+    "commentsCount": 1,
+    "viewsCount": 0,
+    "media": {
         "uri": "https://hdvdev.blob.core.windows.net/creatives/c28acfa5a2992242a4c82ddde1780cc8d29e.png",
         "contentType": "image/png",
         "poster": null,
@@ -132,9 +207,105 @@
 }
 </code></pre>
 
-<p><em>Sample:</em></p>
+<h4>
+<a id="user" class="anchor" href="#user" aria-hidden="true"><span class="octicon octicon-link"></span></a>User</h4>
 
-<pre><code>    {
+<p><em>Sample</em>:
+{
+    "userId": "cicg17uam0000n7kf3gvdnozt",
+    "displayName": "rock latino",
+    "city": "san jose",
+    "country": "Costa Rica",
+    "role": "artist",
+    "dateCreated": "1437645847171",
+    "isEmailConfirmed": false,
+    "canopyPicture": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png">https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png</a>",
+    "selfie": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png">https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png</a>",
+    "identityProvider": "local",
+    "facebookOptIn": false,
+    "points": 0,
+    "members": 2,
+    "styles": [
+        "Volksmusik"
+    ],
+    "creatorName": "luis delgado"
+}</p>
+
+<h4>
+<a id="media" class="anchor" href="#media" aria-hidden="true"><span class="octicon octicon-link"></span></a>Media</h4>
+
+<p>The media object contains information about the media assets associated with a post.</p>
+
+<table>
+<thead>
+<tr>
+<th>Property</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>uri</td>
+<td>String. Absolute uri to the file that contains the main media of the post</td>
+</tr>
+<tr>
+<td>contentType</td>
+<td>String. Specifies the MIME type of the <code>uri</code> asset</td>
+</tr>
+<tr>
+<td>poster</td>
+<td>String. Absolute uri of the poster (image) file. A poster is a screenshot from a frame of a video. Can be null.</td>
+</tr>
+<tr>
+<td>webm</td>
+<td>String. Absolute uri of the file that contains the webm version of this video. Can be null or empty string.</td>
+</tr>
+<tr>
+<td>mp3</td>
+<td>String. Absolute uri of the audio file for this post. Can be null or empty string. This applies to video and audio posts.</td>
+</tr>
+</tbody>
+</table>
+
+<p><em>Example</em>:
+"media": {
+    "uri": "<a href="https://hdvdev.blob.core.windows.net/creatives/c28acfa5a2992242a4c82ddde1780cc8d29e.png">https://hdvdev.blob.core.windows.net/creatives/c28acfa5a2992242a4c82ddde1780cc8d29e.png</a>",
+    "contentType": "image/png",
+    "poster": null,
+    "webm": "",
+    "mp3": ""
+}</p>
+
+<h4>
+<a id="post-1" class="anchor" href="#post-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>/post</h4>
+
+<p><em>Requires authentication: No</em>
+Return Array of JSON objects
+The post is the core of the platform and represents content uploaded by artists themselves.</p>
+
+<table>
+<thead>
+<tr>
+<th>Property</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>content</td>
+<td>main content text of the post</td>
+</tr>
+<tr>
+<td>date_published</td>
+<td>date, expressed in milliseconds, when the post was first created</td>
+</tr>
+</tbody>
+</table>
+
+<p><em>Sample reply:</em></p>
+
+<pre><code>[
+    {
         "content": "adsf",
         "date_published": 1442473848399,
         "liked_by": [
@@ -212,116 +383,6 @@
             "recordManaged": true,
             "storeAGB": true
         }
-    }
-
-#### Media
-The media object contains information about the media assets associated with a post.
-
-Property | Description
--------- | -----------
-uri | String. Absolute uri to the file that contains the main media of the post
-
-        "media": {
-            "uri": "https://hdvdev.blob.core.windows.net/creatives/c28acfa5a2992242a4c82ddde1780cc8d29e.png",
-            "contentType": "image/png",
-            "poster": null,
-            "webm": "",
-            "mp3": ""
-        },
-
-#### /post
-_Requires authentication: No_
-Return Array of JSON objects
-The post is the core of the platform and represents content uploaded by artists themselves.
-
-Property | Description
--------- | -----------
-content | main content text of the post
-date_published | date, expressed in milliseconds, when the post was first created
-
-
-_Sample reply:_
-</code></pre>
-
-<p>[
-    {
-        "content": "adsf",
-        "date_published": 1442473848399,
-        "liked_by": [
-            {
-                "userId": "cicg17uam0000n7kf3gvdnozt"
-            }
-        ],
-        "comments": [
-            {
-                "postId": "cienvoor30000sfpns52nxtg7",
-                "commentId": "ciepxhc3y0000rrpn6chjwep4",
-                "author": {
-                    "userId": "cicg17uam0000n7kf3gvdnozt",
-                    "displayName": "rock latino",
-                    "city": "san jose",
-                    "country": "Costa Rica",
-                    "role": "artist",
-                    "dateCreated": "1437645847171",
-                    "canopyPicture": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png">https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png</a>",
-                    "selfie": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png">https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png</a>",
-                    "identityProvider": "local",
-                    "facebookOptIn": false,
-                    "points": 0,
-                    "members": 2,
-                    "styles": [
-                        "Volksmusik"
-                    ],
-                    "managed": true,
-                    "recordManaged": true,
-                    "storeAGB": true
-                },
-                "content": "this is a comment",
-                "datePublished": 1442597797007
-            }
-        ],
-        "title": "asdf",
-        "likesCount": 1,
-        "commentsCount": 1,
-        "viewsCount": 0,
-        "media": {
-            "uri": "<a href="https://hdvdev.blob.core.windows.net/creatives/c28acfa5a2992242a4c82ddde1780cc8d29e.png">https://hdvdev.blob.core.windows.net/creatives/c28acfa5a2992242a4c82ddde1780cc8d29e.png</a>",
-            "contentType": "image/png",
-            "poster": null,
-            "webm": "",
-            "mp3": ""
-        },
-        "styles": [
-            "volkstümlicher schlager"
-        ],
-        "category": "backstage",
-        "cuid": "cienvoor30000sfpns52nxtg7",
-        "authorId": "cicg17uam0000n7kf3gvdnozt",
-        "isHitParadeEligible": true,
-        "isEncoded": true,
-        "id": "226ce56a-0d74-4758-157d-2063afb6feaa",
-        "author": {
-            "userId": "cicg17uam0000n7kf3gvdnozt",
-            "displayName": "rock latino",
-            "city": "san jose",
-            "country": "Costa Rica",
-            "role": "artist",
-            "dateCreated": "1437645847171",
-            "isEmailConfirmed": false,
-            "canopyPicture": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png">https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png</a>",
-            "selfie": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png">https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png</a>",
-            "identityProvider": "local",
-            "facebookOptIn": false,
-            "points": 0,
-            "members": 2,
-            "styles": [
-                "Volksmusik"
-            ],
-            "creatorName": "luis delgado",
-            "managed": true,
-            "recordManaged": true,
-            "storeAGB": true
-        }
     },
     {
         "content": "adsf",
@@ -337,7 +398,7 @@ _Sample reply:_
         "commentsCount": 0,
         "viewsCount": 1,
         "media": {
-            "uri": "<a href="https://hdvdev.blob.core.windows.net/creatives/8a2a75f3ca0ffc40caebfcb29bd1caed1b99.png">https://hdvdev.blob.core.windows.net/creatives/8a2a75f3ca0ffc40caebfcb29bd1caed1b99.png</a>",
+            "uri": "https://hdvdev.blob.core.windows.net/creatives/8a2a75f3ca0ffc40caebfcb29bd1caed1b99.png",
             "contentType": "image/png",
             "poster": null,
             "webm": "",
@@ -360,8 +421,8 @@ _Sample reply:_
             "role": "artist",
             "dateCreated": "1437645847171",
             "isEmailConfirmed": false,
-            "canopyPicture": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png">https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png</a>",
-            "selfie": "<a href="https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png">https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png</a>",
+            "canopyPicture": "https://hdvdev.blob.core.windows.net/profiles/cicg1cov500020ekfe5evafop.png",
+            "selfie": "https://hdvdev.blob.core.windows.net/profiles/cicg1c85000010ekfl6rkmsiy.png",
             "identityProvider": "local",
             "facebookOptIn": false,
             "points": 0,
@@ -375,19 +436,25 @@ _Sample reply:_
             "storeAGB": true
         }
     }
-]</p>
-
-<pre><code>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.
-
-### Creating pages manually
-If you prefer to not use the automatic generator, push a branch named `gh-pages` to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.
-
-### Authors and Contributors
-You can @mention a GitHub username to generate a link to their profile. The resulting `&lt;a&gt;` element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (@defunkt), PJ Hyett (@pjhyett), and Tom Preston-Werner (@mojombo) founded GitHub.
-
-### Support or Contact
-Having trouble with Pages? Check out our [documentation](https://help.github.com/pages) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+]
 </code></pre>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/hdvmedia/HDV-docs">Helden der Volksmusik</a> is maintained by <a href="https://github.com/hdvmedia">hdvmedia</a>.</span>
